<resources>
    <string name="app_name">AndroidModule1</string>
    <string name="backward"><![CDATA[< Cerrar]]></string>
    <string name="ejercicio_1">Ejercicio 1</string>
    <string name="ejercicio_2">Ejercicio 2</string>
    <string name="tarea">Tarea</string>
    <string name="layout">Layout: </string>
    <string name="tema">Temas: </string>
    <string name="noticias">Noticias</string>
    <string name="anterior"><![CDATA[<]]></string>
    <string name="siguiente"><![CDATA[>]]></string>
    <string name="receta">Receta pay de limón</string>
    <string name="mostrar_notas">Mostrar notas</string>
    <string name="nota_final">Nota: ConstraintLayout es todo el Activity</string>
    <string name="nombre_layout">Layout vacío</string>
    <string name="vendo">VENDO CASA</string>

    <!-- Tarea en inglés -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_your_email_address">Write your email address.</string>
    <string name="write_your_password">Write your password</string>
    <string name="registrar_cuenta">Registrar Cuenta</string>
    <string name="login">Login</string>
    <string name="register_new_account">Register new account</string>
    <string name="please_fill_all_fields_to_register">Please fill all fields to register</string>
    <string name="write_your_name">Write your name.</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="login_title">Login</string>
    <string name="credentials_login">Please use your credentials to login</string>
    <string name="login_email_address">Write your email address.</string>
    <string name="login_password">Write your password</string>
    <string name="login_button">Login</string>
    <string name="login_note">If you do not have an username, please register: here</string>
    <string name="password_strength">Password Strength:</string>
    <string name="select_gender">Select Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="kind_of_user">Kind of user:</string>
    <string name="terms_and_conditions">I accept the terms and conditions</string>
    <string name="select_an_option">Select an option</string>
    <string name="last_login">Last Login: Never</string>
    <string name="reg_email">Email</string>
    <string name="reg_name">Name</string>
    <string name="reg_new_password">New Password</string>
    <string name="reg_password_strength">Password Strength:</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_update_changes">Update Changes</string>
    <string name="reg_logout">Logout</string>
    <string name="reg_welcome">Welcome</string>
    <string name="reg_gender">Gender</string>
    <string name="reg_lbl_email">Email:</string>
    <string name="reg_label_name">Name:</string>
    <string name="reg_label_password">Password:</string>
    <string name="reg_label_gender">Gender:</string>
    <string name="reg_label_kind_of_user"><![CDATA[Kind of user: ]]></string>
    <string name="invalid_credentials">Invalid credentials!</string>
    <string name="equipo">Equipo:</string>
    <string name="carlo">- Carlo García Sánchez</string>
    <string name="christian">- Christian Alexis Santos Escobar</string>
    <string name="vidal">- Vidal Ruiz Vargas</string>
</resources>