<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".finalexercise.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/register_new_account"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvSubTitle"
        android:text="@string/please_fill_all_fields_to_register"
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:layout_marginTop="20dp"
        />


    <!-- Email -->
    <EditText
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/write_your_email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"
        android:layout_marginTop="20dp"
        />

    <!-- Name -->
    <EditText
        android:id="@+id/etName"
        android:inputType="textPersonName"
        android:hint="@string/write_your_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:layout_marginTop="20dp"
        />
    <!-- Contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:hint="@string/write_your_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:layout_marginTop="20dp"
        />

    <!-- Confirmar Contraseña -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:inputType="textPassword"
        android:hint="@string/confirm_your_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:layout_marginTop="20dp"
        />
    <!-- Selección de Género -->
    <TextView
        android:id="@+id/tvGender"
        android:text="Select Gender:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvPasswordStrength"
        android:text="Password Strength: "
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
        android:layout_marginTop="8dp"/>


    <RadioGroup
        android:id="@+id/rgGender"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvGender"
        app:layout_constraintTop_toBottomOf="@+id/tvGender"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/rbMale"
            android:text="Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbFemale"
            android:text="Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvKindOfUser"
        android:text="Kind of user:"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        android:layout_marginTop="20dp"/>

    <!-- Selección de Tipo de Usuario -->
    <Spinner
        android:id="@+id/spAccessType"
        android:hint="Select an option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKindOfUser"
        />
    <!-- Aceptar Términos -->
    <CheckBox
        android:id="@+id/chkTerms"
        android:text="I accept the terms and conditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spAccessType"
        android:layout_marginTop="20dp"/>
    <!-- Botón de Registro -->
    <Button
        android:id="@+id/btnRegister"
        android:text="@string/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkTerms"
        android:layout_marginTop="20dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>